--- a/12-version_control.Rmd
+++ b/12-version_control.Rmd
@@ -421,7 +421,7 @@ image_read("img/version_control/upload-files_02.png") %>%
 ```
 
 Note that Git and GitHub are designed to track changes in individual files. 
-*Do not* upload your whole project in an archive file (e.g. `.zip`), because
+*Do not* upload your whole project in an archive file (e.g. `.zip`). If you do,
 then Git can only keep track of changes to the entire `.zip` file---that 
 wouldn't be very useful if you're trying to see the history of changes to a 
 single code file in your project!
